--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,25 @@
   box-sizing: border-box;
 }
 
+/* TODO: change font family */
+.container {
+  width: 90%;
+  margin-inline: auto;
+}
+
 .board {
-  width: 300px;
+  min-width: 300px;
+  width: 80vw;
+  max-width: 375px;
   aspect-ratio: 1/1;
   /* border: 1px solid black; */
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   box-shadow: 0.3rem 0.3rem 0 black;
+}
+
+.board[data-board="computer"] {
+  cursor: crosshair;
 }
 
 .board div {
@@ -22,20 +34,22 @@
   touch-action: none;
 }
 
+.allowDrag {
+  cursor: move;
+}
+
 .drag {
   background-color: grey;
 }
 
 .hit {
   background-color: red;
+  cursor: not-allowed;
 }
 
 .miss {
   background-color: blue;
-}
-
-.disabled {
-  background-color: pink;
+  cursor: not-allowed;
 }
 
 .bigTitle {
@@ -57,17 +71,11 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  /* TODO: make start button move to middle on mobile */
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
+  gap: 2rem;
 }
 
-/* HACK: fix mobile layout */
-@media (max-width: 820px) {
-  .boardsContainer {
-    gap: 1rem;
-    flex-direction: column;
-  }
-
+@media (max-width: 1050px) {
   .listOfShips {
     display: none;
   }
@@ -75,9 +83,11 @@
 
 .buttonContainer {
   display: flex;
-  flex-direction: column;
-  flex-shrink: 4;
-  gap: 1rem;
+  margin: 1rem 0;
+}
+.buttonContainer button {
+  display: inline-block;
+  margin-inline: auto;
 }
 
 button {
