--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,22 @@
   margin: 0;
   box-sizing: border-box;
 }
+/* protest-guerrilla-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Protest Guerrilla";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./fonts/protest-guerrilla-v2-latin-regular.woff2") format("woff2");
+}
+/* orbitron-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Orbitron";
+  font-style: normal;
+  font-weight: 500;
+  src: url("./fonts/orbitron-v31-latin-500.woff2") format("woff2");
+}
 
 /* TODO: change font family */
 .container {
@@ -53,6 +69,8 @@
 }
 
 .bigTitle {
+  font-family: "Protest Guerrilla";
+  font-size: 3.5rem;
   text-align: center;
   margin: 1rem;
 }
@@ -129,8 +147,13 @@ button:active {
 }
 
 .messageInfo {
+  font-family: Orbitron;
   border: 2px solid black;
   text-align: center;
   padding: 1rem;
-  margin: 1rem 5rem 3rem;
+  margin: 0rem 5rem 2rem;
+}
+
+.messageInfo p {
+  font-size: max(0.8rem, min(2vw, 1rem));
 }
