--- a/src/View/template.html
+++ b/src/View/template.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8" />
     <title>Battleship</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script defer src="main.js"></script></head>
+  </head>
   <body></body>
 </html>
